test/libyul/yulSyntaxTests/eof/eof_opcodes_identifiers_reserved_in_eof.yul
{
    function dataloadn() {}
    function rjump() {}
    function rjumpi() {}
    function callf() {}
    function jumpf() {}
    function retf() {}
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// DeclarationError 5017: (6-29): The identifier "dataloadn" is reserved and can not be used.
// DeclarationError 5017: (34-53): The identifier "rjump" is reserved and can not be used.
// DeclarationError 5017: (58-78): The identifier "rjumpi" is reserved and can not be used.
// DeclarationError 5017: (83-102): The identifier "callf" is reserved and can not be used.
// DeclarationError 5017: (107-126): The identifier "jumpf" is reserved and can not be used.
// DeclarationError 5017: (131-149): The identifier "retf" is reserved and can not be used.
